--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+Version 1.06 - 19th February 2006
+    + Moved to SVN and Module::Build
+
 Version 1.05 - 10th January 2006
     + Initial release
 
